--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Tommy Treb",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -17,7 +19,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "live-server": "^1.2.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "react": "^16.0.0",
@@ -26,7 +28,9 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "validator": "^9.0.0",
-    "webpack": "^3.7.1",
+    "webpack": "^3.7.1"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^2.9.2"
   }
 }
